vendor/xrslam/include/XRSLAM.h

typedef enum XRSLAMSensorType {
  XRSLAM_SENSOR_CAMERA = 0,
  XRSLAM_SENSOR_DEPTH_CAMERA,
  XRSLAM_SENSOR_ACCELERATION,
  XRSLAM_SENSOR_GYROSCOPE,
  XRSLAM_SENSOR_GRAVITY,
  XRSLAM_SENSOR_ROTATION_VECTOR,
  XRSLAM_SENSOR_UNKNOWN
} XRSLAMSensorType;
typedef struct XRSLAMImageExtension {
  double exposure_time;
  double default_focus_distance;
  double focal_length;
  double focus_distance;
} XRSLAMImageExtension;
typedef struct XRSLAMImage {
  unsigned char *data;
  double timeStamp;
  int stride;
  int camera_id;
  int channel;
  XRSLAMImageExtension *ext;
} XRSLAMImage;
typedef struct XRSLAMDepthImage {
  uint16_t *data;
  uint16_t *confidence;
  double timeStamp;
} XRSLAMDepthImage;
typedef struct XRSLAMAcceleration {
  double data[3];
  double timestamp;
} XRSLAMAcceleration;
typedef struct XRSLAMGyroscope {
  double data[3];
  double timestamp;
} XRSLAMGyroscope;
typedef struct XRSLAMGravity {
  double data[3];
  double timestamp;
} XRSLAMGravity;
typedef struct XRSLAMRotationVector {
  double data[4];
  double timestamp;
} XRSLAMRotationVector;
typedef enum XRSLAMResultType {
  XRSLAM_RESULT_BODY_POSE = 0,
  XRSLAM_RESULT_CAMERA_POSE,
  XRSLAM_RESULT_STATE,
  XRSLAM_RESULT_LANDMARKS,
  XRSLAM_RESULT_FEATURES,
  XRSLAM_RESULT_BIAS,
  XRSLAM_RESULT_DEBUG_LOGS,
  XRSLAM_RESULT_VERSION,
  XRSLAM_RESULT_UNKNOWN,
  XRSLAM_INFO_INTRINSICS
} XRSLAMResultType;
typedef struct XRSLAMPose {
  double quaternion[4];
  double translation[3];
  double timestamp;
} XRSLAMPose;
int XRSLAMCreate(const char *slam_config_path,
                 const char *device_config_path,
                 const char *license_path,
                 const char *product_name,
                 void **config);
void XRSLAMRunOneFrame(void);
void XRSLAMDestroy(void);