lib/vio/ffi/xrslam_bindings.dart


  late final _XRSLAMGetLandmarksExPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Double>,
            ffi.Pointer<ffi.UnsignedChar>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<XRSLAMLandmarkStats>,
          )
        >
      >('XRSLAMGetLandmarksEx');
  late final _XRSLAMGetLandmarksEx =
      _XRSLAMGetLandmarksExPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.UnsignedChar>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<XRSLAMLandmarkStats>,
        )
      >();

  /// @brief 读健康快照(条目 16 + Blocker 01 的诊断出口)。
  /// @param[out] out 非 NULL;**无条件先整体清零**,然后才可能被填。
  /// @return XRSLAM_OK / XRSLAM_ERR_BAD_ARG(out == NULL)。
  /// 未 Create 时**也返回 XRSLAM_OK**,out->overall == XRSLAM_HEALTH_NOT_CREATED,
  /// 这样"库没起来"和"调用姿势不对"能被区分开。
  /// @note 会做一次 O(点数) 的 landmark 扫描以填 landmarks_*,不要每帧调很多次。
  int XRSLAMGetHealth(ffi.Pointer<XRSLAMHealth> out) {
    return _XRSLAMGetHealth(out);
  }

  late final _XRSLAMGetHealthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<XRSLAMHealth>)>>(
        'XRSLAMGetHealth',
      );
  late final _XRSLAMGetHealth =
      _XRSLAMGetHealthPtr.asFunction<int Function(ffi.Pointer<XRSLAMHealth>)>();

  /// @brief 设置自检阈值。可在 XRSLAMCreate 之前调用;Create/Destroy 不会重置它们。
  /// @param[in] max_abs_cam_imu_delta_sec  |t_cam - t_imu| 的域错配阈值,<= 0 或非有限
  /// 则保持原值。默认 1.0。
  /// @param[in] max_baseline_drift_sec     |delta - baseline| 的告警阈值,同上。默认 0.5。
  /// @param[in] min_landmarks_for_healthy  低于此数且在 TRACKING 中则判 DEGRADED_LOW_TEXTURE,
  /// < 0 则保持原值。默认 20。
  /// @return XRSLAM_OK
  int XRSLAMSetHealthThresholds(
    double max_abs_cam_imu_delta_sec,
    double max_baseline_drift_sec,
    int min_landmarks_for_healthy,
  ) {
    return _XRSLAMSetHealthThresholds(
      max_abs_cam_imu_delta_sec,
      max_baseline_drift_sec,
      min_landmarks_for_healthy,
    );
  }

  late final _XRSLAMSetHealthThresholdsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Double, ffi.Double, ffi.Int32)>
      >('XRSLAMSetHealthThresholds');
  late final _XRSLAMSetHealthThresholds =
      _XRSLAMSetHealthThresholdsPtr.asFunction<
        int Function(double, double, int)
      >();

  /// @brief 非阻塞拉取最新位姿(条目 06 的 API 形状)。
  ///
  /// 为什么是**拉取**而不是每帧回调:dart:ffi 是同步同线程的。
  /// NativeCallable.isolateLocal 从非创建线程调用会**硬 abort**(不是抛异常),
  /// 而 XRSLAM_ENABLE_THREADING 打开时库内确有真的后台工作线程;
  /// NativeCallable.listener 只支持返回 void 且是异步投递,拿不到同步结果。
  /// 所以正确形状是 Dart 侧自己按需 poll 本函数。
  ///
  /// @param[out] out_pose7     非 NULL,长度 7 的 double 数组。**无条件先清零**。
  /// 布局钉死为 **[qx, qy, qz, qw, px, py, pz]**
  /// —— 四元数在前、实部 w 在**第 4 位**(与 XRSLAMPose
  /// 的 quaternion[4] = {x,y,z,w} 完全一致),平移在后。
  /// 位姿口径 = **body pose**,与 XRSLAMGetBodyPose 同源
  /// (即已乘 imu_to_body)。
  /// @param[out] out_timestamp 非 NULL,秒。**无条件先清零**。
  /// @return XRSLAM_OK           拿到了比上次**更新**、且**几何上合法**的位姿。
  /// XRSLAM_NO_NEW_DATA  没有可用的新位姿。**不阻塞、不等待**。两种情况:
  /// (a) 时间戳不比上次调用交出的更新;
  /// (b) 位姿退化 —— 四元数全零或非有限。跟踪器初始化
  /// 之前 detail.cpp:predict_pose 会 setZero(),而
  /// track_camera 照样连着合法时间戳一起存下来,
  /// 所以"时间戳在前进"**不能**当作位姿可用的判据。
  /// 这两种情况下 out_pose7 保持**全零**、out_timestamp
  /// 保持 0,内部"已交付时间戳"也不前进。
  /// XRSLAM_ERR_BAD_ARG / XRSLAM_ERR_NOT_CREATED / XRSLAM_ERR_INTERNAL
  /// @note 位姿只在 XRSLAMRunOneFrame 里前进(Detail::track_camera 才写 latest_pose_);
  /// 只 push IMU 不调 RunOneFrame,本函数会一直返回 XRSLAM_NO_NEW_DATA。
  /// @note 内部持短锁,可能阻塞在锁上;ffigen/@Native 绑定**不要**标 isLeaf: true。
  int XRSLAMTryGetLatestPose(
    ffi.Pointer<ffi.Double> out_pose7,
    ffi.Pointer<ffi.Double> out_timestamp,
  ) {
    return _XRSLAMTryGetLatestPose(out_pose7, out_timestamp);
  }

  late final _XRSLAMTryGetLatestPosePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)
        >
      >('XRSLAMTryGetLatestPose');
  late final _XRSLAMTryGetLatestPose =
      _XRSLAMTryGetLatestPosePtr.asFunction<
        int Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)
      >();

  /// @brief depth-fusion telemetry from the latest optimization.
  /// @param[out] seeded number of active landmarks carrying a LiDAR depth prior.
  /// @param[out] total  number of active landmarks in the sliding window.
  void XRSLAMGetDepthFusionStats(
    ffi.Pointer<ffi.Int> seeded,
    ffi.Pointer<ffi.Int> total,
  ) {
    return _XRSLAMGetDepthFusionStats(seeded, total);
  }

  late final _XRSLAMGetDepthFusionStatsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)
        >
      >('XRSLAMGetDepthFusionStats');
  late final _XRSLAMGetDepthFusionStats =
      _XRSLAMGetDepthFusionStatsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)
      >();

  /// @brief destroy SLAM system
  void XRSLAMDestroy() {
    return _XRSLAMDestroy();
  }

  late final _XRSLAMDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('XRSLAMDestroy');
  late final _XRSLAMDestroy = _XRSLAMDestroyPtr.asFunction<void Function()>();
}

/// XRSLAM sensor data
/// /
/// /**
/// @brief input sensor data type
enum XRSLAMSensorType {
  /// !< gray image.
  XRSLAM_SENSOR_CAMERA(0),

  /// !< depth image.
  XRSLAM_SENSOR_DEPTH_CAMERA(1),

  /// !< acceleration.
  XRSLAM_SENSOR_ACCELERATION(2),

  /// !< gyroscope.
  XRSLAM_SENSOR_GYROSCOPE(3),

  /// !< gravity.
  XRSLAM_SENSOR_GRAVITY(4),

  /// !< rotation vector.
  XRSLAM_SENSOR_ROTATION_VECTOR(5),
  XRSLAM_SENSOR_UNKNOWN(6);

  final int value;
  const XRSLAMSensorType(this.value);

  static XRSLAMSensorType fromValue(int value) => switch (value) {
    0 => XRSLAM_SENSOR_CAMERA,
    1 => XRSLAM_SENSOR_DEPTH_CAMERA,
    2 => XRSLAM_SENSOR_ACCELERATION,
    3 => XRSLAM_SENSOR_GYROSCOPE,
    4 => XRSLAM_SENSOR_GRAVITY,
    5 => XRSLAM_SENSOR_ROTATION_VECTOR,
    6 => XRSLAM_SENSOR_UNKNOWN,
    _ => throw ArgumentError('Unknown value for XRSLAMSensorType: $value'),
  };
}

/// @brief Image extension info
final class XRSLAMImageExtension extends ffi.Struct {
  /// !< image exposure time.
  @ffi.Double()
  external double exposure_time;

  /// !< default focus info.
  @ffi.Double()
  external double default_focus_distance;

  /// !< current focal length.
  @ffi.Double()
  external double focal_length;

  /// !< current focus distance.
  @ffi.Double()
  external double focus_distance;
}

/// [pw] ★ 帧时间戳语义契约(条目 09)★
///
/// 背景:两端采集层默认给的**不是同一个东西**,而库内没有任何 td(time offset)
/// 状态量 —— `state.h: ES_SIZE == 15`,误差状态只有 Q/P/V/BG/BA。yaml 里那个
/// `camera_time_offset` 是**死旋钮**:只在 yaml_config.cpp 解析、config.cpp 打印,
/// xrslam/src 里零消费。所以时间戳约定必须由采集层负责对齐,库这一层只做声明、
/// 换算与自检。
/// - Android `SensorTimestamp` / `CaptureResult.SENSOR_TIMESTAMP`:官方文档说明
/// 是**第一行(first row)曝光开始**的时刻。
/// - iOS `CMSampleBufferGetPresentationTimeStamp`:Apple **没有文档化**它指向
/// 曝光窗口的哪一点。不要假设它等于 Android 的语义。
///
/// ★ 本库的规范(canonical)约定 ★
/// XRSLAMImage.timeStamp 一律解释为:
/// **图像几何中心行(center row)的曝光中点(mid-exposure)**,单位秒,
/// 且与 XRSLAMAcceleration.timestamp / XRSLAMGyroscope.timestamp
/// **处在同一个时钟域**(同一 epoch、同一单调时钟)。
/// 选这个点的理由:它是全帧曝光能量的一阶矩,也是 rolling shutter 下"平均像素"
/// 的采样时刻,对纯平移/纯旋转都是无偏的一阶近似。
///
/// 采集层要么自己换算到 canonical 并声明 XRSLAM_TS_CANONICAL,要么如实声明原始
/// 语义 + 填 readout_time,由 PushImage 替你换算。**不声明**(默认 0 =
/// XRSLAM_TS_UNSPECIFIED)时库按原值使用,但会在 XRSLAMHealth 里把
/// `timestamp_convention` 报成 UNSPECIFIED —— 这是"我不知道"的显式记号,不是默认正确。
enum XRSLAMTimestampConvention {
  XRSLAM_TS_UNSPECIFIED(0),
  XRSLAM_TS_CANONICAL(1),
  XRSLAM_TS_FIRST_ROW_EXPOSURE_START(2),
  XRSLAM_TS_FIRST_ROW_EXPOSURE_MID(3);

  final int value;
  const XRSLAMTimestampConvention(this.value);

  static XRSLAMTimestampConvention fromValue(int value) => switch (value) {
    0 => XRSLAM_TS_UNSPECIFIED,
    1 => XRSLAM_TS_CANONICAL,
    2 => XRSLAM_TS_FIRST_ROW_EXPOSURE_START,
    3 => XRSLAM_TS_FIRST_ROW_EXPOSURE_MID,
    _ => throw ArgumentError(
      'Unknown value for XRSLAMTimestampConvention: $value',
    ),
  };
}

/// @brief input gray image data
final class XRSLAMImage extends ffi.Struct {
  /// !< contains the intensity value for each image pixel.
  external ffi.Pointer<ffi.UnsignedChar> data;

  /// !< timestamp in second.
  @ffi.Double()
  external double timeStamp;

  /// !< image stride, number of bytes per row.
  @ffi.Int()
  external int stride;

  /// !< camera id.
  @ffi.Int()
  external int camera_id;

  /// !< image channel.
  @ffi.Int()
  external int channel;

  /// !< ext info of image.
  external ffi.Pointer<XRSLAMImageExtension> ext;

  /// !< 本帧实际宽度(像素)。0 = 未填,回退到 yaml cam0.resolution 并警告一次。
  @ffi.Int()
  external int width;

  /// !< 本帧实际高度(像素)。0 = 未填,回退到 yaml cam0.resolution 并警告一次。
  @ffi.Int()
  external int height;

  @ffi.Double()
  external double readout_time;

  @ffi.Int32()
  external int timestamp_convention;

  @ffi.Int32()
  external int reserved0;
}

/// @brief input depth image data
final class XRSLAMDepthImage extends ffi.Struct {
  /// !< depth in millimetres (0 = invalid), row-major.
  external ffi.Pointer<ffi.Uint16> data;

  /// !< optional per-pixel confidence (may be null).
  external ffi.Pointer<ffi.Uint16> confidence;

  /// !<  timestamp in second.
  @ffi.Double()
  external double timeStamp;

  /// !< depth map width in pixels.
  @ffi.Int()
  external int width;

  /// !< depth map height in pixels.
  @ffi.Int()
  external int height;
}

/// @brief input acceleration data
final class XRSLAMAcceleration extends ffi.Struct {
  /// !< acceleration raw data.
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Double> data;

  /// !< timestamp in second.
  @ffi.Double()
  external double timestamp;
}

/// @brief input gyroscope data
final class XRSLAMGyroscope extends ffi.Struct {
  /// !< gyroscope raw data.
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Double> data;

  /// !< timestamp in second.
  @ffi.Double()
  external double timestamp;
}

/// @brief input gravity direction data
final class XRSLAMGravity extends ffi.Struct {
  /// !< gravity direction.
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Double> data;

  /// !< timestamp in second.
  @ffi.Double()
  external double timestamp;
}

/// @brief attitude of the device
final class XRSLAMRotationVector extends ffi.Struct {
  /// !< attitude of the device.
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Double> data;

  /// !< timestamp in second.
  @ffi.Double()
  external double timestamp;
}

/// XRSLAM tracking result
/// /
/// /**
/// @brief slam result data type
enum XRSLAMResultType {
  /// !< body pose.
  XRSLAM_RESULT_BODY_POSE(0),

  /// !< camera pose.
  XRSLAM_RESULT_CAMERA_POSE(1),

  /// !< system state.
  XRSLAM_RESULT_STATE(2),

  /// !< 3D landmarks.
  XRSLAM_RESULT_LANDMARKS(3),

  /// !< 2D features.
  XRSLAM_RESULT_FEATURES(4),

  /// !< imu bias.
  XRSLAM_RESULT_BIAS(5),

  /// !< [pw] NOT IMPLEMENTED,落到空 break。
  XRSLAM_RESULT_DEBUG_LOGS(6),

  /// !< [pw] 已移除,改用 XRSLAMGetVersion。
  XRSLAM_RESULT_VERSION(7),
  XRSLAM_RESULT_UNKNOWN(8),
  XRSLAM_INFO_INTRINSICS(9);

  final int value;
  const XRSLAMResultType(this.value);

  static XRSLAMResultType fromValue(int value) => switch (value) {
    0 => XRSLAM_RESULT_BODY_POSE,
    1 => XRSLAM_RESULT_CAMERA_POSE,
    2 => XRSLAM_RESULT_STATE,
    3 => XRSLAM_RESULT_LANDMARKS,
    4 => XRSLAM_RESULT_FEATURES,
    5 => XRSLAM_RESULT_BIAS,
    6 => XRSLAM_RESULT_DEBUG_LOGS,
    7 => XRSLAM_RESULT_VERSION,
    8 => XRSLAM_RESULT_UNKNOWN,
    9 => XRSLAM_INFO_INTRINSICS,
    _ => throw ArgumentError('Unknown value for XRSLAMResultType: $value'),
  };
}

/// @brief    slam pose.
/// @details  For a 3D point in world coordinate \f$ X_w \f$, its 3D
/// coordinate in the camera frame \f$ X_c = R * X_w + T \f$
final class XRSLAMPose extends ffi.Struct {
  /// !< quaternion of rotation: format [x, y, z, w].
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Double> quaternion;
